# Autonomous-ML-Agent

./: .gitignore  .pre-commit-config.yaml  API_KEYS_SETUP.md  CONTRIBUTING.md  Dockerfile  FRONTEND_INTEGRATION.md  Makefile  OPENROUTER_INTEGRATION.md  README.md  README_ENHANCED.md  README_ML_ENGINEERING.md  debug_pipeline.py  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  setup.py  setup_api_keys.py  setup_environment.sh  setup_frontend.sh  simple_test.py  tasks.json  test_installation.py  web_app.py
.github/workflows/: ci.yml
docs/: API-Reference.md  Frontend-Architecture.md  Home.md  LLM-Integration.md  Quick-Start.md  README.md  System-Architecture.md  User-Manual.md
examples/: comprehensive_demo.py  gemini_integration_demo.py  ml_engineering_demo.py  sample_dataset.csv
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/dashboard/: dashboard.tsx  data-upload.tsx  dataset-upload.tsx  pipeline-config.tsx  pipeline-execution.tsx  results-visualization.tsx
frontend/src/components/landing/: hero.tsx
frontend/src/components/layout/: header.tsx  mobile-step-indicator.tsx  navigation.tsx  sidebar.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  loading-spinner.tsx  logo.tsx
meta/: runs.db
src/: __init__.py  __main__.py  cli.py
src/agent_llm/: code_generator.py  planner.py
src/core/: benchmarking.py  evaluate.py  ingest.py  meta_learning.py  mlflow_tracker.py  model_zoo.py  models.py  orchestrator.py  preprocess.py  reproducibility.py  search.py
src/data/: ingestion.py  meta_features.py  preprocessing.py
src/deployment/: __init__.py  pipeline_exporter.py  registry.py
src/ensemble/: blending.py
src/evaluation/: __init__.py  leaderboard.py  metrics.py
src/models/: __init__.py  algorithms.py  ensemble.py  ensemble_strategies.py  hyperopt.py  interpretability.py  meta_learning.py  natural_language_summaries.py
src/service/: app.py  model_service.py
src/service/docker/: Dockerfile
src/utils/: llm_client.py
tests/: test_basic.py
